--- a/index.html
+++ b/index.html
@@ -10,21 +10,12 @@
 </head>
 
 <body>
+    <div class="container">
+        <div id="holder">
 
-    <div id="container">
-
-    </div>
-
-    <!-- <div class="card-holder">
-        <div class="card-holder-inner" id="test">
-            <div class="card-front">
-                <img src="../rock-paper-scissors/media/hellomdfk.jpg" alt="Avatar" style="width:100px;height:100px;">
-            </div>
-            <div class="card-back">
-                <img src="./img/cheeseburger.png" alt="Avatar" style="width:100px;height:100px;">
-            </div>
         </div>
-    </div> -->
+    </div>
+    <script src="./script/constants.js"></script>
     <script src="./script/script.js"></script>
 </body>
 
